class Prix:
    def __init__(self, devise, montant):
        self.devise = devise
        self.montant = montant
    
    def _conversioneuros(self):
        return self.montant