class Produit:
    def __init__(self, nom, articles):
        self._nom = nom
        self._articles = articles
