@startuml
legend right
    |Couleur  | Type     |
    |<#FF0000>| Public   |
    |<#FFFF00>| Protégée |
    |<#00FF00>| Privée   |
endlegend

skinparam class {
    BackgroundColor LightGoldenRodYellow
    BorderColor black
}

class "SiteWeb" {
    # nom : str
    - url_recherche : list<str>
    + <<Create>> __init__(nom : str, url_recherche : list<str>)
    - WebScrapping(nom_article : str) : list<Article>
    + EnregistrementHtml()
    
    
}

class "InterfaceUtilisateur" {
    - indcices_produits : dict[str, float]
    - indcices_categorie_produit : dict[str, float]
    + <<Create>> __init__()
    - AfficherCarte()
    - AfficherHistogramme()
    - ChargerNouveauxIndices()
    - __main__()
}

class Article {
    # id_article : str
    # prix : Prix
    # pays : str
    + <<Create>> __init__(id_article : str, prix : Prix, pays : str)
}

class Produit {
    # nom : str
    # articles : dict[str, Article]
    + <<Create>> __init__(nom : str, articles : dict[tr, Article])
    # CalculIndicesProduit() : dict[str, float]
    + AjouteDonneesExterieures(articles_ext : dict[str, Article]) 
    + EnregistrementProduit()
    + EnregistrementIndices()
}

class "CategorieProduit" {
    # nom : str
    # produits : dict[str, Produit]
    + <<Create>> __init__(nom : str, produits : dict[str, Produit])
    # CalculIndicesCategorie() : dict[str, float]
    + EnregistrementCategorieProduit()
    + EnregistrementIndices()
}

class Prix {
    + devise : str
    + montant : float
    + <<Create>> __init__(devise : str, montant : float)
    # ConversionEuros() : float
    - ObtientTauxChange() : float

}


"SiteWeb" o-- Article
Article --o Produit
Produit --o "CategorieProduit"

"CategorieProduit" -- "InterfaceUtilisateur" : fourni données >
Produit -- "InterfaceUtilisateur" : fourni données >
@enduml